Fixed image slider alignment

--- a/src/pages/galleries/landscapes/Landscapes.scss
+++ b/src/pages/galleries/landscapes/Landscapes.scss
@@ -1,5 +1,6 @@
 .Landscapes-page {
-    display: block;
+    display: flex;
+    justify-content: center;
     text-align: center;
     min-height: 100vh;
     width: 100vw;
